# THRAM

./: .gitignore  README.md
app-compiler/: CMakeLists.txt  build.sh
app-compiler/applications/: Makefile  compile.sh
app-compiler/applications/array_add/: array_add.c
app-compiler/applications/gemm/: gemm.c
app-compiler/llvm-pass/include/: llvm_cdfg.h  llvm_cdfg_edge.h  llvm_cdfg_node.h
app-compiler/llvm-pass/src/: CDFGPass.cpp  llvm_cdfg.cpp  llvm_cdfg_node.cpp
benchmarks/test/arf/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
benchmarks/test/centro-fir/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
benchmarks/test/cosine1/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
benchmarks/test/cosine2/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
benchmarks/test/ewf/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
benchmarks/test/fft/: config.bit  (+3 more)
cgra-compiler/: run.sh
cgra-compiler/src/: main.cpp
cgra-dse/: GPE.py  PEWaste.txt  README.md  area.txt  bestLatency.txt  cgra_spec.json  consheteCompare_TRAMnew_heteGIB.py  data.txt  demo.py  dfgoptype.txt  dse.py  dse_hete.py  dse_homo.py  heteCompare_Cgrame.py  heteCompare_TRAMnew.py  heteCompare_TRAMnew_heteGIB.py  heteCompare_TRAMnew_heteGIB_opt.py  heteCompare_TRAMold.py  homo.py  main.py  power.txt  result.py  test.py  test1.py  testoneobj.py  testoneobj_bigchange.py
cgra-dse/analyzeDFG/: rundfg.sh
cgra-dse/cgraflow/: archSpec.py  runCGRA.py
cgra-mg/: area.txt  build.sbt
cgra-mg/test_run_dir/: CGRA.anno.json
(+78 files in other folders)
